--- a/Clase9/proyectoClase.css
+++ b/Clase9/proyectoClase.css
@@ -41,3 +41,12 @@ body{
 .card__imagen{
     width: 100%;
 }
+@media (max-width:450px){
+    .contenedor-grid{
+        grid-template-columns: repeat(auto-fit,minmax(200px, 1fr));
+    }
+    .card{
+        grid-template-columns:1fr;
+        text-align: center;
+    }
+}
